--- a/app/globals.css
+++ b/app/globals.css
@@ -24,7 +24,7 @@
     --border: 0 0% 89.8%;
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
-    --radius: 0.6rem;
+    --radius: 0rem;
     --chart-1: 12 76% 61%;
     --chart-2: 173 58% 39%;
     --chart-3: 142 71% 44%;
@@ -66,6 +66,10 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+
+  ::selection {
+    @apply bg-orange-400 text-primary-foreground;
   }
 }
 
