--- a/app/globals.css
+++ b/app/globals.css
@@ -43,7 +43,7 @@
   .dark {
     --background: 0 0% 8%;
     --foreground: 0 0% 98%;
-    --card: 0 0% 10%;
+    --card: 0 0% 14%;
     --card-foreground: 0 0% 98%;
     --popover: 0 0% 3.9%;
     --popover-foreground: 0 0% 98%;
@@ -85,7 +85,7 @@
   }
 
   ::selection {
-    @apply bg-orange-400 text-primary-foreground;
+    @apply bg-orange-400 dark:bg-alt_violet text-primary-foreground;
   }
 }
 
