Add sidebar navigation component and user data fetching; update layout for improved user experience

--- a/app/globals.css
+++ b/app/globals.css
@@ -39,7 +39,7 @@
   --chart-4: hsl(43 74% 66%);
   --chart-5: hwb(27 38% 4%);
   --radius: 0.4rem;
-  --sidebar: hsl(0 0% 100%);
+  --sidebar: hsl(0, 0%, 97%);
   --sidebar-foreground: hsl(240 5.3% 26.1%);
   --sidebar-primary: hsl(240 5.9% 10%);
   --sidebar-primary-foreground: hsl(0 0% 98%);
@@ -50,9 +50,9 @@
 }
 
 .dark {
-  --background: hsl(222.2 84% 4.9%);
+  --background: hsl(0, 0%, 7%);
   --foreground: hsl(210 40% 98%);
-  --card: hsl(222.2 84% 4.9%);
+  --card: hsl(0, 0%, 10%);
   --card-foreground: hsl(210 40% 98%);
   --popover: hsl(222.2 84% 4.9%);
   --popover-foreground: hsl(210 40% 98%);
