Update styles and refactor components for improved clarity and consistency

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,7 +10,7 @@
   --color-color-3: #2c155d;
   --color-color-4: #fdecff;
   --color-color-5: #3c0b22;
-  --color-color-6: #fe7743;
+  --color-color-6: #00a256;
 }
 
 :root {
