--- a/app/globals.css
+++ b/app/globals.css
@@ -32,9 +32,9 @@
   --border: oklch(0.923 0.003 48.717);
   --input: oklch(0.923 0.003 48.717);
   --ring: oklch(0.709 0.01 56.259);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
+  --chart-1: oklch(0.627 0.194 149.214);
+  --chart-2: oklch(0.6 0.2222 32.76);
+  --chart-3: oklch(0.606 0.25 292.717);
   --chart-4: oklch(0.828 0.189 84.429);
   --chart-5: oklch(0.769 0.188 70.08);
   --sidebar: oklch(0.985 0.001 106.423);
@@ -147,5 +147,8 @@
   body {
     @apply bg-background text-foreground;
   }
-}
 
+  ::selection {
+    @apply bg-green-50 text-green-600;
+  }
+}
