--- a/app/globals.css
+++ b/app/globals.css
@@ -13,72 +13,74 @@
 }
 
 :root {
-  --radius: 0.625rem;
-  --background: oklch(1 0 0);
-  --foreground: oklch(0.147 0.004 49.25);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.147 0.004 49.25);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.147 0.004 49.25);
-  --primary: oklch(0.216 0.006 56.043);
-  --primary-foreground: oklch(0.985 0.001 106.423);
-  --secondary: oklch(0.97 0.001 106.424);
-  --secondary-foreground: oklch(0.216 0.006 56.043);
-  --muted: oklch(0.97 0.001 106.424);
-  --muted-foreground: oklch(0.553 0.013 58.071);
-  --accent: oklch(0.97 0.001 106.424);
-  --accent-foreground: oklch(0.216 0.006 56.043);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.923 0.003 48.717);
-  --input: oklch(0.923 0.003 48.717);
-  --ring: oklch(0.709 0.01 56.259);
-  --chart-1: oklch(0.627 0.194 149.214);
-  --chart-2: oklch(0.6 0.2222 32.76);
-  --chart-3: oklch(0.606 0.25 292.717);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0.001 106.423);
-  --sidebar-foreground: oklch(0.147 0.004 49.25);
-  --sidebar-primary: oklch(0.216 0.006 56.043);
-  --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
-  --sidebar-accent: oklch(0.97 0.001 106.424);
-  --sidebar-accent-foreground: oklch(0.216 0.006 56.043);
-  --sidebar-border: oklch(0.923 0.003 48.717);
-  --sidebar-ring: oklch(0.709 0.01 56.259);
+  --background: oklch(0.985 0 0);
+  --card: oklch(0.985 0 0);
+  --popover: oklch(0.985 0 0);
+  --sidebar: oklch(0.99 0 none);
+  --foreground: oklch(0.213 0 0);
+  --card-foreground: oklch(0.213 0 0);
+  --popover-foreground: oklch(0.213 0 0);
+  --sidebar-foreground: oklch(0.213 0 0);
+  --primary: oklch(0.523 0.19 258);
+  --sidebar-primary: oklch(0.523 0.19 258);
+  --primary-foreground: oklch(0.961 0 0);
+  --sidebar-primary-foreground: oklch(0.961 0 0);
+  --secondary: oklch(0.88 0.013 256);
+  --accent: oklch(0.88 0.013 256);
+  --sidebar-accent: oklch(0.88 0.013 256);
+  --secondary-foreground: oklch(0.218 0 0);
+  --accent-foreground: oklch(0.218 0 0);
+  --sidebar-accent-foreground: oklch(0.218 0 0);
+  --muted: oklch(0.914 0.005 248);
+  --muted-foreground: oklch(0.589 0.023 255);
+  --destructive: oklch(0.603 0.235 28);
+  --destructive-foreground: oklch(0.961 0 0);
+  --border: oklch(0.849 0.032 256);
+  --sidebar-border: oklch(0.849 0.032 256);
+  --ring: oklch(0.799 0.066 255);
+  --sidebar-ring: oklch(0.799 0.066 255);
+  --input: oklch(0.849 0.029 255);
+  --chart-1: oklch(0.523 0.19 258);
+  --chart-2: oklch(0.526 0.154 253);
+  --chart-3: oklch(0.415 0.185 264);
+  --chart-4: oklch(0.522 0.103 235);
+  --chart-5: oklch(0.414 0.122 257);
+  --radius: 0.5rem;
 }
 
 .dark {
-  --background: oklch(0.147 0.004 49.25);
-  --foreground: oklch(0.985 0.001 106.423);
-  --card: oklch(0.216 0.006 56.043);
-  --card-foreground: oklch(0.985 0.001 106.423);
-  --popover: oklch(0.216 0.006 56.043);
-  --popover-foreground: oklch(0.985 0.001 106.423);
-  --primary: oklch(0.923 0.003 48.717);
-  --primary-foreground: oklch(0.216 0.006 56.043);
-  --secondary: oklch(0.268 0.007 34.298);
-  --secondary-foreground: oklch(0.985 0.001 106.423);
-  --muted: oklch(0.268 0.007 34.298);
-  --muted-foreground: oklch(0.709 0.01 56.259);
-  --accent: oklch(0.268 0.007 34.298);
-  --accent-foreground: oklch(0.985 0.001 106.423);
-  --destructive: oklch(0.704 0.191 22.216);
-  --border: oklch(1 0 0 / 10%);
-  --input: oklch(1 0 0 / 15%);
-  --ring: oklch(0.553 0.013 58.071);
-  --chart-1: oklch(0.488 0.243 264.376);
-  --chart-2: oklch(0.696 0.17 162.48);
-  --chart-3: oklch(0.769 0.188 70.08);
-  --chart-4: oklch(0.627 0.265 303.9);
-  --chart-5: oklch(0.645 0.246 16.439);
-  --sidebar: oklch(0.216 0.006 56.043);
-  --sidebar-foreground: oklch(0.985 0.001 106.423);
-  --sidebar-primary: oklch(0.488 0.243 264.376);
-  --sidebar-primary-foreground: oklch(0.985 0.001 106.423);
-  --sidebar-accent: oklch(0.268 0.007 34.298);
-  --sidebar-accent-foreground: oklch(0.985 0.001 106.423);
-  --sidebar-border: oklch(1 0 0 / 10%);
-  --sidebar-ring: oklch(0.553 0.013 58.071);
+  --background: oklch(0.19 0.009 256);
+  --card: oklch(0.19 0.009 256);
+  --popover: oklch(0.19 0.009 256);
+  --sidebar: oklch(0.19 0.009 256);
+  --foreground: oklch(0.961 0 0);
+  --card-foreground: oklch(0.961 0 0);
+  --popover-foreground: oklch(0.961 0 0);
+  --sidebar-foreground: oklch(0.961 0 0);
+  --primary: oklch(0.587 0.204 258);
+  --sidebar-primary: oklch(0.587 0.204 258);
+  --primary-foreground: oklch(0.961 0 0);
+  --sidebar-primary-foreground: oklch(0.961 0 0);
+  --secondary: oklch(0.267 0.036 259);
+  --accent: oklch(0.267 0.036 259);
+  --sidebar-accent: oklch(0.267 0.036 259);
+  --secondary-foreground: oklch(0.961 0 0);
+  --accent-foreground: oklch(0.961 0 0);
+  --sidebar-accent-foreground: oklch(0.961 0 0);
+  --muted: oklch(0.318 0.03 258);
+  --muted-foreground: oklch(0.673 0.022 257);
+  --destructive: oklch(0.605 0.233 28);
+  --destructive-foreground: oklch(0.961 0 0);
+  --border: oklch(0.303 0.051 258);
+  --sidebar-border: oklch(0.303 0.051 258);
+  --ring: oklch(0.351 0.097 256);
+  --sidebar-ring: oklch(0.351 0.097 256);
+  --input: oklch(0.306 0.045 257);
+  --chart-1: oklch(0.587 0.204 258);
+  --chart-2: oklch(0.641 0.166 251);
+  --chart-3: oklch(0.571 0.197 265);
+  --chart-4: oklch(0.738 0.116 231);
+  --chart-5: oklch(0.682 0.124 255);
 }
 
 @theme inline {
@@ -149,6 +151,6 @@
   }
 
   ::selection {
-    @apply bg-green-50 text-green-600;
+    @apply bg-orange-100 text-blue-600;
   }
 }
