--- a/app/globals.css
+++ b/app/globals.css
@@ -16,75 +16,74 @@
   --background: oklch(0.985 0 0);
   --card: oklch(0.985 0 0);
   --popover: oklch(0.985 0 0);
-  --sidebar: oklch(0.97 0 none);
+  --sidebar: oklch(0.985 0 0);
   --foreground: oklch(0.216 0 0);
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
   --sidebar-foreground: oklch(0.216 0 0);
-  --primary: oklch(0.848 0.19 151);
-  --sidebar-primary: oklch(0.848 0.19 151);
-  --primary-foreground: oklch(0.218 0 0);
-  --sidebar-primary-foreground: oklch(0.218 0 0);
-  --secondary: oklch(0.888 0.009 161);
-  --accent: oklch(0.888 0.009 161);
-  --sidebar-accent: oklch(0.888 0.009 161);
+  --primary: oklch(0.65 0.203 145);
+  --sidebar-primary: oklch(0.65 0.203 145);
+  --primary-foreground: oklch(0.961 0 0);
+  --sidebar-primary-foreground: oklch(0.961 0 0);
+  --secondary: oklch(0.886 0 0);
+  --accent: oklch(0.886 0 0);
+  --sidebar-accent: oklch(0.886 0 0);
   --secondary-foreground: oklch(0.218 0 0);
   --accent-foreground: oklch(0.218 0 0);
   --sidebar-accent-foreground: oklch(0.218 0 0);
-  --muted: oklch(0.925 0 0);
-  --muted-foreground: oklch(0.607 0.02 155);
-  --destructive: oklch(0.608 0.23 28);
+  --muted: oklch(0.893 0 0);
+  --muted-foreground: oklch(0.6 0 0);
+  --destructive: oklch(0.597 0.238 29);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.898 0.032 157);
-  --sidebar-border: oklch(0.898 0.032 157);
-  --ring: oklch(0.881 0.074 155);
-  --sidebar-ring: oklch(0.881 0.074 155);
-  --input: oklch(0.896 0.029 157);
-  --chart-1: oklch(0.848 0.19 151);
-  --chart-2: oklch(0.64 0.1936 24.45);
-  --chart-3: oklch(0.55 0.2278 294.33);
-  --chart-4: oklch(0.787 0.23 144);
-  --chart-5: oklch(0.769 0.197 150);
+  --border: oklch(0.85 0.012 153);
+  --sidebar-border: oklch(0.85 0.012 153);
+  --ring: oklch(0.832 0.06 153);
+  --sidebar-ring: oklch(0.832 0.06 153);
+  --input: oklch(0.85 0.012 153);
+  --chart-1: oklch(0.74 0.2174 146.04);
+  --chart-2: oklch(0.6 0.2273 31.53);
+  --chart-3: oklch(0.59 0.263 299.05);
+  --chart-4: oklch(0.9 0.1898 107.39);
   --radius: 0.3rem;
 }
 
 .dark {
-  --background: oklch(0.195 0.007 164);
-  --card: oklch(0.195 0.007 164);
-  --popover: oklch(0.195 0.007 164);
-  --sidebar: oklch(0.195 0.007 164);
-  --foreground: oklch(0.963 0 0);
-  --card-foreground: oklch(0.963 0 0);
-  --popover-foreground: oklch(0.963 0 0);
-  --sidebar-foreground: oklch(0.963 0 0);
-  --primary: oklch(0.83 0.217 149);
-  --sidebar-primary: oklch(0.83 0.217 149);
+  --background: oklch(0.228 0 0);
+  --card: oklch(0.228 0 0);
+  --popover: oklch(0.228 0 0);
+  --sidebar: oklch(0.228 0 0);
+  --foreground: oklch(0.961 0 0);
+  --card-foreground: oklch(0.961 0 0);
+  --popover-foreground: oklch(0.961 0 0);
+  --sidebar-foreground: oklch(0.961 0 0);
+  --primary: oklch(0.87 0.269 145);
+  --sidebar-primary: oklch(0.87 0.269 145);
   --primary-foreground: oklch(0.218 0 0);
   --sidebar-primary-foreground: oklch(0.218 0 0);
-  --secondary: oklch(0.226 0.022 153);
-  --accent: oklch(0.226 0.022 153);
-  --sidebar-accent: oklch(0.226 0.022 153);
+  --secondary: oklch(0.317 0.013 154);
+  --accent: oklch(0.317 0.013 154);
+  --sidebar-accent: oklch(0.317 0.013 154);
   --secondary-foreground: oklch(0.961 0 0);
   --accent-foreground: oklch(0.961 0 0);
   --sidebar-accent-foreground: oklch(0.961 0 0);
-  --muted: oklch(0.291 0.022 156);
-  --muted-foreground: oklch(0.692 0.021 155);
-  --destructive: oklch(0.599 0.236 28);
+  --muted: oklch(0.365 0.01 152);
+  --muted-foreground: oklch(0.685 0.006 153);
+  --destructive: oklch(0.613 0.228 27);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.319 0.05 153);
-  --sidebar-border: oklch(0.319 0.05 153);
-  --ring: oklch(0.417 0.102 150);
-  --sidebar-ring: oklch(0.417 0.102 150);
-  --input: oklch(0.317 0.046 154);
-  --chart-1: oklch(0.83 0.217 149);
-  --chart-2: oklch(0.828 0.211 148);
-  --chart-3: oklch(0.833 0.158 158);
-  --chart-4: oklch(0.827 0.186 145);
-  --chart-5: oklch(0.838 0.138 153);
+  --border: oklch(0.348 0.019 151);
+  --sidebar-border: oklch(0.348 0.019 151);
+  --ring: oklch(0.441 0.087 151);
+  --sidebar-ring: oklch(0.441 0.087 151);
+  --input: oklch(0.349 0.017 152);
+  --chart-1: oklch(0.74 0.2174 146.04);
+  --chart-2: oklch(0.6 0.2273 31.53);
+  --chart-3: oklch(0.59 0.263 299.05);
+  --chart-4: oklch(0.9 0.1898 107.39);
 }
 
 /* Add Tailwind v4 @theme configuration as needed */
 /* Example: @theme { --color-primary: var(--primary); } */
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -153,6 +152,6 @@
   }
 
   ::selection {
-    @apply bg-orange-100 text-blue-600;
+    @apply bg-orange-600 text-orange-50;
   }
 }
