--- a/app/globals.css
+++ b/app/globals.css
@@ -3,20 +3,20 @@
 
 @custom-variant dark (&:is(.dark *));
 
-@theme {
+/* @theme {
   --color-color-1: #e4ffcd;
   --color-color-2: #0a353b;
   --color-color-3: #2c155d;
   --color-color-4: #fdecff;
   --color-color-5: #3c0b22;
   --color-color-6: #00a256;
-}
+} */
 
 :root {
   --background: oklch(0.985 0 0);
   --card: oklch(0.985 0 0);
   --popover: oklch(0.985 0 0);
-  --sidebar: oklch(0.97 0.0068 145.52);
+  --sidebar: oklch(0.97 0 none);
   --foreground: oklch(0.216 0 0);
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
@@ -35,7 +35,7 @@
   --muted-foreground: oklch(0.6 0 0);
   --destructive: oklch(0.597 0.238 29);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.85 0.012 153);
+  --border: oklch(0.9 0 none);
   --sidebar-border: oklch(0.85 0.012 153);
   --ring: oklch(0.832 0.06 153);
   --sidebar-ring: oklch(0.832 0.06 153);
@@ -45,7 +45,7 @@
   --chart-3: oklch(0.59 0.263 299.05);
   --chart-4: oklch(0.9 0.1898 107.39);
   --radius: 0.3rem;
-  --contrast: oklch(0.77 0.1723 62.08);
+  --contrast: oklch(0.72 0.18 44.23)
 }
 
 .dark {
@@ -80,7 +80,7 @@
   --chart-2: oklch(0.6 0.2273 31.53);
   --chart-3: oklch(0.59 0.263 299.05);
   --chart-4: oklch(0.9 0.1898 107.39);
-  --contrast: oklch(0.57 0.1633 44.72);
+  --contrast: oklch(0.72 0.18 44.23)
 }
 
 /* Add Tailwind v4 @theme configuration as needed */
