--- a/app/globals.css
+++ b/app/globals.css
@@ -14,9 +14,9 @@
 
 :root {
   --background: oklch(0.985 0 0);
-  --card: oklch(0.985 0 0);
+  --card: oklch(1 0 none);
   --popover: oklch(0.985 0 0);
-  --sidebar: oklch(0.97 0 none);
+  --sidebar: oklch(1 0 none);
   --foreground: oklch(0.216 0 0);
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
@@ -35,7 +35,7 @@
   --muted-foreground: oklch(0.6 0 0);
   --destructive: oklch(0.597 0.238 29);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.9 0 none);
+  --border: oklch(0.93 0 none);
   --sidebar-border: oklch(0.85 0.012 153);
   --ring: oklch(0.832 0.06 153);
   --sidebar-ring: oklch(0.832 0.06 153);
@@ -50,9 +50,9 @@
 
 .dark {
   --background: oklch(0.228 0 0);
-  --card: oklch(0.228 0 0);
+  --card: oklch(0.2 0 none);
   --popover: oklch(0.228 0 0);
-  --sidebar: oklch(0.228 0 0);
+  --sidebar: oklch(0.2 0 none);
   --foreground: oklch(0.961 0 0);
   --card-foreground: oklch(0.961 0 0);
   --popover-foreground: oklch(0.961 0 0);
@@ -71,7 +71,7 @@
   --muted-foreground: oklch(0.685 0.006 153);
   --destructive: oklch(0.613 0.228 27);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.348 0.019 151);
+  --border: oklch(0.27 0 none);
   --sidebar-border: oklch(0.348 0.019 151);
   --ring: oklch(0.441 0.087 151);
   --sidebar-ring: oklch(0.441 0.087 151);
