--- a/app/globals.css
+++ b/app/globals.css
@@ -3,14 +3,15 @@
 
 @custom-variant dark (&:is(.dark *));
 
-/* @theme {
-  --color-color-1: #e4ffcd;
+@theme {
+  /* --color-color-1: #e4ffcd;
   --color-color-2: #0a353b;
   --color-color-3: #2c155d;
   --color-color-4: #fdecff;
   --color-color-5: #3c0b22;
-  --color-color-6: #00a256;
-} */
+  --color-color-6: #00a256; */
+  --spacing-custom-height-1: 27rem;
+}
 
 :root {
   --background: oklch(0.985 0 0);
@@ -45,7 +46,7 @@
   --chart-3: oklch(0.59 0.263 299.05);
   --chart-4: oklch(0.9 0.1898 107.39);
   --radius: 0.3rem;
-  --contrast: oklch(0.72 0.18 44.23)
+  --contrast: oklch(0.72 0.18 44.23);
 }
 
 .dark {
@@ -80,7 +81,7 @@
   --chart-2: oklch(0.6 0.2273 31.53);
   --chart-3: oklch(0.59 0.263 299.05);
   --chart-4: oklch(0.9 0.1898 107.39);
-  --contrast: oklch(0.72 0.18 44.23)
+  --contrast: oklch(0.72 0.18 44.23);
 }
 
 /* Add Tailwind v4 @theme configuration as needed */
@@ -150,6 +151,7 @@
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground antialiased;
   }
