--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
   --sidebar-foreground: oklch(0.216 0 0);
-  --primary: oklch(0.81 0.21 149.69);
+  --primary: oklch(0.8 0.1593 69.37);
   --sidebar-primary: oklch(0.87 0.2 125.11);
   --primary-foreground: oklch(0.21 0 none);
   --sidebar-primary-foreground: oklch(0.961 0 0);
@@ -33,12 +33,12 @@
   --accent-foreground: oklch(0.218 0 0);
   --sidebar-accent-foreground: oklch(0.218 0 0);
   --muted: oklch(0.893 0 0);
-  --muted-foreground: oklch(0.6 0 0);
+  --muted-foreground: oklch(0.33 0 none);
   --destructive: oklch(0.597 0.238 29);
   --destructive-foreground: oklch(0.961 0 0);
   --border: oklch(0.96 0 none);
   --sidebar-border: oklch(0.85 0.012 153);
-  --ring: oklch(0.81 0.21 149.69);
+  --ring: oklch(0.64 0 none);
   --sidebar-ring: oklch(0.832 0.06 153);
   --input: oklch(0.85 0.012 153);
   --chart-1: oklch(0.74 0.2174 146.04);
@@ -58,7 +58,7 @@
   --card-foreground: oklch(0.961 0 0);
   --popover-foreground: oklch(0.961 0 0);
   --sidebar-foreground: oklch(0.961 0 0);
-  --primary: oklch(0.87 0.269 145);
+  --primary: oklch(0.67 0.2109 302.59);
   --sidebar-primary: oklch(0.87 0.269 145);
   --primary-foreground: oklch(0.218 0 0);
   --sidebar-primary-foreground: oklch(0.218 0 0);
@@ -74,14 +74,14 @@
   --destructive-foreground: oklch(0.961 0 0);
   --border: oklch(0.25 0 none);
   --sidebar-border: oklch(0.348 0.019 151);
-  --ring: oklch(0.441 0.087 151);
+  --ring: oklch(0.8 0.1072 305.4);
   --sidebar-ring: oklch(0.441 0.087 151);
   --input: oklch(0.349 0.017 152);
   --chart-1: oklch(0.74 0.2174 146.04);
   --chart-2: oklch(0.6 0.2273 31.53);
   --chart-3: oklch(0.59 0.263 299.05);
   --chart-4: oklch(0.9 0.1898 107.39);
-  --contrast: oklch(0.37 0.1795 300.49);
+  --contrast: oklch(0.94 0.2028 119.64);
 }
 
 /* Add Tailwind v4 @theme configuration as needed */
