refactor: remover funções storeCurrentBalance e getLastPrevious
As funções storeCurrentBalance e getLastPrevious foram removidas do
código, pois não são mais necessárias. Além disso, foram feitas
atualizações nas importações e ajustes de estilo nos componentes
do dashboard e do card.

--- a/app/globals.css
+++ b/app/globals.css
@@ -52,7 +52,7 @@
   --card-foreground: oklch(0.961 0 0);
   --popover-foreground: oklch(0.961 0 0);
   --sidebar-foreground: oklch(0.961 0 0);
-  --primary: oklch(0.67 0.2109 302.59);
+  --primary: oklch(0.87 0 none);
   --sidebar-primary: oklch(0.87 0.269 145);
   --primary-foreground: oklch(0.218 0 0);
   --sidebar-primary-foreground: oklch(0.218 0 0);
