feat: Implement budget management features with CRUD operations and UI updates

--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,7 @@
   --background: oklch(1 0 none);
   --card: oklch(1 0 none);
   --popover: oklch(0.985 0 0);
-  --sidebar: oklch(1 0 none);
+  --sidebar:  oklch(78.874% 0.18927 121.054 / 0.10);
   --foreground: oklch(0.216 0 0);
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
