style: Ajustar estilos e classes em vários componentes
- Atualiza a classe do link no AccountWidget para incluir 'font-medium'.
- Modifica a altura da barra de progresso no PaymentSection.
- Altera a cor de fundo no MoneyValues para 'text-emerald-900'.
- Remove a borda no Card para um visual mais limpo.
- Atualiza a cor de fundo no globals.css para um valor mais apropriado.

--- a/app/globals.css
+++ b/app/globals.css
@@ -8,10 +8,10 @@
 }
 
 :root {
-  --background: oklch(1 0 none);
+  --background: oklch(97.439% 0.01217 121.964);
   --card: oklch(1 0 none);
   --popover: oklch(0.985 0 0);
-  --sidebar:  oklch(78.874% 0.18927 121.054 / 0.10);
+  --sidebar: oklch(100% 0.00011 271.152);
   --foreground: oklch(0.216 0 0);
   --card-foreground: oklch(0.216 0 0);
   --popover-foreground: oklch(0.216 0 0);
