--- a/app/globals.css
+++ b/app/globals.css
@@ -30,7 +30,7 @@
   --muted-foreground: oklch(40.54% 0.00005 271.152);
   --destructive: oklch(0.597 0.238 29);
   --destructive-foreground: oklch(0.961 0 0);
-  --border: oklch(0.96 0 none);
+  --border: oklch(94.007% 0.00011 271.152);
   --sidebar-border: oklch(0.85 0.012 153);
   --ring: oklch(0.64 0 none);
   --sidebar-ring: oklch(0.832 0.06 153);
