--- a/app/globals.css
+++ b/app/globals.css
@@ -14,7 +14,7 @@
   --card-foreground: oklch(0 0 0);
   --popover: oklch(0.99 0 0);
   --popover-foreground: oklch(0 0 0);
-  --primary: oklch(0.7 0.19 149.34);
+  --primary: oklch(77.177% 0.20872 150.729);
   --primary-foreground: oklch(1 0 0);
   --secondary: lch(95 1.78 142.55);
   --secondary-foreground: oklch(0 0 0);
